css/style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

.backround{
    height: 100vh;
    width: 100%;
    padding: 24px;
    background: rgb(0,150,136);
    background: -moz-linear-gradient(180deg, rgba(0,150,136,1) 12%, rgba(218,219,212,1) 12%);
    background: -webkit-linear-gradient(180deg, rgba(0,150,136,1) 12%, rgba(218,219,212,1) 12%);
    background: linear-gradient(180deg, rgba(0,150,136,1) 12%, rgba(218,219,212,1) 12%);
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#009688",endColorstr="#dadbd4",GradientType=1);
}


.mainBox{
    height: 100%;
    width: 1600px;
    margin: 0 auto;
    background-color: white;
    display: flex;
}

aside{
    width: 30%;
    height: 100%;
    background: cadetblue;
}

main{
    height: 100%;
    width: 70%;
    display: flex;
    flex-wrap: wrap;
    
}


.header{
    width: 100%;
    height: 70px;
    padding: 12px;
    background: #EAEAEA;
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.l{
    border-left: 1px solid #D6D6D6;
}
.r{
    border-right: 1px solid #D6D6D6;
}

.marginRight8px{
    margin-right: 8px;
}

.header i{
    font-size: 22px;
    margin: 8px;
    color: #B1B1B1;
}

.dFlex{
    display: flex;
}
.alignItemsCenter{
    align-items: center;
}
.justifyContentCenter{
    justify-content: center;
}

.flexColumn{
    justify-content: center;
    display: flex;
    flex-direction: column;
}

.header .flexColumn p {
    color:#959C9B;
}

.circleIcon{
    height: 54px;
    width: 54px;
    border-radius: 27px;
    background-color: #F2FBFF;
}

.banner{
    background-color: #8EDAFC ;
    padding: 12px;
}

.banner i{
    color: #8EDAFC;
    font-size: 22px;
}
.banner a {
    color: #537B8E;
}
.search{
    height: 52px;
    padding: 4px;
    background-color: #FAFAFA;
}
.searchButton{
    height: 100%;
    width: 10%;
    border: 1px solid #FEFEFE;
    background-color: #FFFFFF;
}
.searchTextInput{
    height: 100%;
    width: 90%;
    border: 1px solid #FEFEFE;
    background-color: #FFFFFF;
    padding: 4px;

}

.chats{
    overflow-y: auto;
    background-color: white;
    height: calc(100vh - 248px);
}

.chat{
    height: 80px ;
    padding: 12px;
    background-color: white;
    border: 1px solid #F9F9F9;
    display: flex;
}

.chat p {
    color: #BCB4BD;
}

.mesasgeInput{
    height: 76px;
    width: 100%;
    background-color:#F3EEEA ;
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.messages{
    width: 100%;
    height: calc(100vh - 195px);
    background-image: url(../img/mine.jpg);
}
.mesasgeInput i{
    font-size: 26px ;
    color: #7C8585;
}
.mesasgeInput input{
    width: 80%;
    height: 52px;
    border: none;
    border-radius: 5px;
    padding: 4px;
}

.messages{
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    padding: 50px;
    overflow-y: auto;
    font-size: 18px;
}

.messagesRecived{
    max-width: 350px;
    background-color:#FFFFFF ;
    border-radius: 10px;
    padding: 18px;
    margin: 8px;
    position: relative;
}

.messagesSent{
    max-width: 350px;
    padding: 18px;
    background-color: #D5F9BA;
    align-self: flex-end;
    border-radius: 10px;
    margin: 8px;
    position: relative;
}

.messagesSent small,
.messagesRecived small{
    font-size: 10px;
    position: absolute;    
    right: 8px;
    bottom: 6px;
    color: #7C8585;
}

